--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-on-rails": "^9.0.2"
+    "react-on-rails": "^9.0.2",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.7.1"
